[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Chessboard/Chessboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Custom/custom.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Computer/Computer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PieceSlot/PieceSlot.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Resources/Peepo.ttf"

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.964706, 0.964706, 0.964706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.964706, 0.964706, 0.964706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.337255 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFont" id=14]
size = 27
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 12
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 12
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
font_data = SubResource( 3 )

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_top = 272.0
margin_right = 384.0
margin_bottom = 644.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerPanel" type="Panel" parent="Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 360.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/InnerPanel"]
margin_left = 17.0
margin_top = 3.0
margin_right = 256.0
margin_bottom = 42.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 4 )
text = "ALPHACENTAURI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chessboard" type="Panel" parent="Panel/InnerPanel"]
margin_left = 9.0
margin_top = 63.0
margin_right = 289.0
margin_bottom = 343.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Root" parent="Panel/InnerPanel/Chessboard" instance=ExtResource( 1 )]
position = Vector2( 4, 4 )
scale = Vector2( 1.7, 1.7 )

[node name="Reset" type="Button" parent="Panel/InnerPanel"]
margin_left = 327.0
margin_top = 15.0
margin_right = 359.0
margin_bottom = 47.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/InnerPanel/Reset"]
position = Vector2( 16, 16 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 16, 16, 16 )

[node name="Hint" type="Button" parent="Panel/InnerPanel"]
margin_left = 289.0
margin_top = 15.0
margin_right = 321.0
margin_bottom = 47.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/InnerPanel/Hint"]
position = Vector2( 16, 16 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 16, 16, 16 )

[node name="PiecePanel" type="Panel" parent="Panel/InnerPanel"]
margin_left = 297.0
margin_top = 63.0
margin_right = 359.4
margin_bottom = 343.0
mouse_filter = 2
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="Panel/InnerPanel/PiecePanel" instance=ExtResource( 4 )]
position = Vector2( 4, 4 )
type = 1

[node name="Slot2" parent="Panel/InnerPanel/PiecePanel" instance=ExtResource( 4 )]
position = Vector2( 4, 58.4 )
type = 2

[node name="Slot3" parent="Panel/InnerPanel/PiecePanel" instance=ExtResource( 4 )]
position = Vector2( 4, 112.8 )

[node name="Slot4" parent="Panel/InnerPanel/PiecePanel" instance=ExtResource( 4 )]
position = Vector2( 4, 167.2 )
type = 4

[node name="Slot5" parent="Panel/InnerPanel/PiecePanel" instance=ExtResource( 4 )]
position = Vector2( 4, 221.6 )
type = 3

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 384.0
margin_bottom = 264.0
text = "Alpha 0.0000001 Version

This level is intended to be intermediate difficulty (Level 3 out of 5)

Place a chess piece on the board to start,

When the chess piece's top number reach 0, it types the letter it is standing on

Then, the piece gets the next number in line indicated by the smaller numbers

Pieces ran out of moves cannot be moved

Type \"MILKYWAY\""
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 17.0
margin_top = 343.0
margin_right = 297.0
margin_bottom = 623.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPanel" type="Panel" parent="Popup"]
margin_left = -17.0
margin_top = -343.0
margin_right = 367.0
margin_bottom = 313.0
mouse_filter = 2
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TruePanel" type="Panel" parent="Popup/BackPanel"]
margin_left = 17.0
margin_top = 343.0
margin_right = 297.0
margin_bottom = 623.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Popup/BackPanel/TruePanel"]
margin_left = 11.0
margin_top = 1.0
margin_right = 115.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 14 )
text = "Hint:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Label" parent="Popup/BackPanel/TruePanel"]
margin_left = 15.0
margin_top = 45.0
margin_right = 263.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 15 )
text = "Each chess piece has a series of counters, when the current counter reaches 0, the letter it is standing on will be typed, and the counter will switch to the next in line.

Type out the word you are thinking to win the level.

Starting from next level, this window will provide you with a hint about the level."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Label" parent="Popup/BackPanel/TruePanel"]
margin_left = 15.0
margin_top = 249.0
margin_right = 210.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 16 )
text = "*Click outside this box to close the hint"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tile_clicked" from="Panel/InnerPanel/Chessboard/Root" to="." method="_on_Root_tile_clicked"]
[connection signal="mouse_entered" from="Panel/InnerPanel/Reset" to="." method="_on_Reset_mouse_entered"]
[connection signal="mouse_exited" from="Panel/InnerPanel/Reset" to="." method="_on_Reset_mouse_exited"]
[connection signal="pressed" from="Panel/InnerPanel/Reset" to="." method="_on_Reset_pressed"]
[connection signal="mouse_entered" from="Panel/InnerPanel/Hint" to="." method="_on_Hint_mouse_entered"]
[connection signal="mouse_exited" from="Panel/InnerPanel/Hint" to="." method="_on_Hint_mouse_exited"]
[connection signal="pressed" from="Panel/InnerPanel/Hint" to="." method="_on_Hint_pressed"]
[connection signal="piece_clicked" from="Panel/InnerPanel/PiecePanel/Slot1" to="." method="_on_Slot_piece_clicked"]
[connection signal="piece_clicked" from="Panel/InnerPanel/PiecePanel/Slot2" to="." method="_on_Slot_piece_clicked"]
[connection signal="piece_clicked" from="Panel/InnerPanel/PiecePanel/Slot3" to="." method="_on_Slot_piece_clicked"]
[connection signal="piece_clicked" from="Panel/InnerPanel/PiecePanel/Slot4" to="." method="_on_Slot_piece_clicked"]
[connection signal="piece_clicked" from="Panel/InnerPanel/PiecePanel/Slot5" to="." method="_on_Slot_piece_clicked"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="about_to_show" from="Popup" to="." method="_on_Popup_about_to_show"]
[connection signal="popup_hide" from="Popup" to="." method="_on_Popup_popup_hide"]
